syntax = "proto3";

option csharp_namespace = "gRPCService.Application.Features.Protos";

package Branch;

service BranchGrpc {
	rpc AddUserToBranch(AddUserToBranchRequest) returns (AddUserToBranchResponse) {}
}

message AddUserToBranchRequest {
	string UserId = 1;
	string BranchId = 2;
}

message AddUserToBranchResponse {
	  bool IsSuccessful = 1;
	  string ResponseMessage = 2;
}